--- a/examples/20170301_class/index.html
+++ b/examples/20170301_class/index.html
@@ -5,10 +5,11 @@
     <title></title>
   </head>
   <body>
-    <h1>header 1</h1>
+    <h1 id="header">header 1</h1>
     <h3>Target</h3>
-    <div class="item">1</div>
+    <div class="item" id="itm">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
+    <script src="./script.js"></script>
   </body>
 </html>
