Modified the TODO app
-made the eslintrc file
-modified the script of TODO

--- a/week1/index.html
+++ b/week1/index.html
@@ -7,16 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="includes/css/bootstrap-glyphicons.css" rel="stylesheet">
-
-    <!-- Stroll.js -->
-    <link rel="stylesheet" href="includes/css/stroll.css">
-
-    <script scr="bootstrap/js/bootstrap.min.js"></script>
-    <script src="includes/js/jquery-1.8.2.min.js"></script>
-
     <link href="includes/css/styles.css" rel="stylesheet">
-    <script src="includes/js/script.js"></script>
-    <script src="includes/js/stroll.min.js"></script>
 
   </head>
   <body>
@@ -33,9 +24,12 @@
 
       <div class="row" id="chart">
         <article>
-          <ul id="todo-list" class="wave">
+          <ul id="todo-list">
           </ul>
         </article>
+      </div>
+      <div class="row" id="counter">
+        <p id='counter-content'>no item left</p>
       </div>
     </div> <!--end of main-->
     </div>
@@ -68,5 +62,9 @@
       </div><!--end of row-->
     </div><!--end of container-->
   </footer>
+
+  <script scr="bootstrap/js/bootstrap.min.js"></script>
+  <script src="includes/js/jquery-1.8.2.min.js"></script>
+  <script src="includes/js/script2.js"></script>
 
 </html>
